# tbz-chat

./: .dockerignore  .gitignore  ConfigureEnv.java  Dockerfile  README.md  build.gradle  configure-env.sh  docker-compose.yaml  nginx.conf  run-backend.sh  settings.gradle
tbz-chat-backend/: Dockerfile  build.gradle  settings.gradle
tbz-chat-backend-rs/: Cargo.toml
tbz-chat-backend-rs/resources/: api-docs.yaml
tbz-chat-backend-rs/src/: authentication.rs  chat.rs  error.rs  invitation.rs  lib.rs  mail.rs  main.rs  swagger.rs  user.rs  util.rs  verification_token.rs
tbz-chat-backend-rs/src/chat/: mod.rs  query.rs
tbz-chat-backend-rs/src/message/: query.rs
tbz-chat-backend-rs/src/swagger/: mod.rs
tbz-chat-backend-rs/src/user/: mod.rs  query.rs  repository.rs  response.rs  service.rs
tbz-chat-backend-rs/src/verification_token/: mod.rs
tbz-chat-backend-rs/src/verification_token/service/: mod.rs  repository.rs
tbz-chat-backend/gradle/wrapper/: gradle-wrapper.properties
tbz-chat-frontend/: .env  .eslintrc.json  .gitignore  build.gradle  configure-env.js  package.json
tbz-chat-frontend/public/: index.html
tbz-chat-frontend/src/: App.test.tsx  dictionary.ts  index.css  index.tsx  types.d.ts
tbz-chat-frontend/src/components/: App.tsx  Page.tsx  Route.tsx  withRenderCount.tsx
tbz-chat-frontend/src/language/: dictionary.ts  language.ts
tbz-chat-frontend/src/models/: Chat.ts  Entity.ts  Message.ts  Role.ts  User.ts  UserInChat.ts
tbz-chat-frontend/src/redux/: globalActions.ts  rootReducer.ts  store.ts
tbz-chat-frontend/src/services/: ChatService.ts  LoginService.ts  MessageService.ts  Response.ts  UserService.ts  VerificationService.ts  api.ts
tbz-chat-frontend/src/style/: defaultTheme.ts  starWarsThemes.ts  theme.ts  themes.ts
tbz-chat-frontend/src/util/: Comparator.ts  EntityMap.ts  EntityState.ts  Selector.ts  SelectorCreator.ts  SelectorWithProps.ts  dateTime.ts  normalizeArray.ts
(+184 files in other folders)
