[package]
name = "tbz-chat-backend-rs"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.6"
bcrypt = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
lettre = { version = "0.10.0-rc.4", features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false}
log = "0.4.14"
serde = "1.0.130"
sqlx = { version = "0.5.9", features = ["runtime-actix-rustls", "postgres", "uuid"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
