[package]
name = "tbz-chat-backend-rs"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.6"
async-trait = "0.1.51"
bcrypt = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
lettre = { version = "0.10.0-rc.4", features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false}
log = "0.4.14"
mime = "0.3.16"
serde = { version = "1.0.130" }
sqlx = { version = "0.5.9", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono"] }
swagger-ui = { git = "https://github.com/Tarkin25/swagger-ui", branch = "feature/actix-web" }
actix-web-swagger-ui = { git = "https://github.com/Tarkin25/swagger-ui", branch = "feature/actix-web" }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
actix-web-httpauth = "0.5.1"
hmac = "0.11.0"
sha2 = "0.9.8"
jwt = "0.15.0"
futures = "0.3.17"
chrono = "0.4.19"

[dev-dependencies]
actix-rt = "2.4.0"
mockall = "0.10.2"
